--- a/css/style.css
+++ b/css/style.css
@@ -987,7 +987,7 @@
 	{
 		position: relative;
 		text-align: center;
-		background: url(../images/grass.jpg) no-repeat center center;
+		background: url(../images/gras.jpg) no-repeat center center;
 		background-attachment: fixed;
 		background-size: cover;
 	}
