--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,15 @@
 		font-weight: 300;
 		color: #777;
 	}
-	
-		h2
+
+		h1
 		{
-			letter-spacing: -0.025em;
+			padding-left: 10%;
+		}
+	
+		h1, h2
+		{
+			letter-spacing: -0.025em;			
 		}
 	
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
@@ -106,8 +111,10 @@
 		margin-bottom: 1.6em;
 	}
 	
-		header h2
+		header h1
 		{
+			margin-top: 6em;
+			padding-left: 2em;
 		}
 
 		header .byline
@@ -164,7 +171,11 @@
 		{
 			display: inline-block;
 		}
-		
+			.image.fit {
+				display: block;
+				width: 100%;
+			}
+
 			.image img
 			{
 				display: block;
@@ -771,7 +782,7 @@
 	#header
 	{
 		position: relative;
-		background: url(../images/header.jpg) no-repeat bottom center;
+		background: url(../images/header_tablet.jpg) no-repeat bottom right;
 		background-attachment: fixed;
 		background-size: cover;
 		text-align: center;
@@ -783,10 +794,35 @@
 			position: absolute;
 			left: 0;
 			top: 0;
-			width: 100%;
 			height: 100%;
 			background: rgba(64,64,64,0.125);
 		}
+
+	#header_beackground
+	{
+		position: relative;
+		text-align: center;
+		background: url(../images/gras.jpg) no-repeat center center;
+		background-attachment: fixed;
+		background-size: cover;
+	}
+
+
+	#top .image {
+		border-radius: 50%;
+		padding: 5%;
+	}
+
+		#top .image img {
+			border-radius: 50%;
+			width: 100%;
+			padding-bottom : 30%; /* = width for a 1:1 aspect ratio */
+			padding-top:30%;
+		}
+
+	#top p a {
+		color: inherit;
+	}
 
 /*********************************************************************************/
 /* Logo                                                                          */
