--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,14 @@
 		color: #777;
 	}
 
-	h1,h2,h3,h4,h5,h6
+	h1
+	{
+		font-weight: 350;
+		color: #333;
+	}
+
+
+	h2,h3,h4,h5,h6
 	{
 		font-weight: 300;
 		color: #777;
@@ -797,7 +804,6 @@
 			height: 100%;
 			background: rgba(64,64,64,0.125);
 		}
-
 
 	#top .image {
 		border-radius: 50%;
